<resources>
    <string name="app_name">Friend Tracker</string>
    <!--Friend List-->
    <string name="ok_label">OK</string>

    <!--Edit Friend-->
    <string name="edit_friend_title">Edit</string>
    <string name="edit_friend_name_text">Name</string>
    <string name="email_text">Email</string>
    <string name="birthday_text">Birthday</string>
    <string name="edit_birthday">Select Birthday</string>
    <string name="remove_friend_text">Delete</string>

    <!--Menu-->
    <string name="display_friend_list_text">Show Friends</string>
    <string name="add_contact_text">Add Friend</string>
    <string name="display_meeting_text">Show Meetings</string>
    <string name="add_meeting_text">Add Meeting</string>

    <!--Meeting-->
    <string name="suggest_now_text">Suggest Now</string>
    <string name="meeting_title">Meeting</string>
    <string name="add_meeting_title">New Meeting</string>
    <string name="meeting_title_text">Meeting Title</string>
    <string name="meeting_title_hint">Title</string>
    <string name="edit_meeting_title">Edit Meeting</string>

    <string name="meeting_date_text">Date</string>
    <string name="meeting_date_hint">Date</string>
    <string name="meeting_start_time_text">Start Time</string>
    <string name="meeting_start_time_hint">Start time</string>
    <string name="meeting_end_time_text">End Time</string>
    <string name="meeting_end_time_hint">End time</string>

    <string name="meeting_friend_list_text">Friends</string>
    <string name="add_friend_to_meeting_title">Invite friend</string>

    <string name="meeting_location_text">Location</string>
    <string name="meeting_location_hint">Location</string>
    <string name="meeting_latitude_hint">Latitude</string>
    <string name="meeting_longitude_hint">Longitude</string>

    <string name="add_meeting_button_text">Add</string>
    <string name="remove_meeting_text">Delete</string>
    <string name="title_activity_location_maps">Map</string>
    <string name="title_activity_locations_map">Map</string>

    <!--Remind Dialog-->
    <string name="remind_text">Remind me in \'x\' minutes</string>
    <string name="remind_cancel">CANCEL</string>
    <string name="remind_ok">OK</string>
</resources>
