<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/edit_friend_name_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/edit_friend_name_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_friend_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/friend_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="8dp"/>

    <TextView
        android:id="@+id/birthday_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birthday_text"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/edit_birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_birthday"
        android:paddingBottom="8dp" />

    <Button
        android:id="@+id/remove_friend_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remove_friend_text" />

</LinearLayout>
