<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center">

    <TextView
        android:id="@+id/remind_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remind_text"/>

    <NumberPicker
        android:id="@+id/remindPicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/remind_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_cancel"/>

        <Button
            android:id="@+id/remind_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/remind_ok"/>
    </LinearLayout>
</LinearLayout>
